[package]
name = "provenance-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An open protocol for securely specifying the historical ownership of images, videos, and more."
authors = ["beyarkay"]
readme = "README.md"

documentation = "https://docs.rs/provenance-rs"
repository = "https://github.com/beyarkay/provenance-rs"
homepage = "https://github.com/beyarkay/provenance-rs"
categories = ["cryptography", "encoding", "multimedia"]
keywords = ["protocol", "cryptography", "encoding", "decoding", "metadata"]

[dependencies]
anyhow = "1.0.80"
kamadak-exif = "0.5.5"
thiserror = "1.0.57"
