[package]
name = "provenance-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A history-of-ownership protocol for securely proving where a document came from."
authors = ["beyarkay"]
readme = "README.md"

documentation = "https://docs.rs/provenance-rs"
repository = "https://github.com/beyarkay/provenance-rs"
homepage = "https://github.com/beyarkay/provenance-rs"
categories = ["cryptography", "encoding", "multimedia"]
keywords = ["protocol", "cryptography", "encoding", "decoding", "metadata"]

[dependencies]
kamadak-exif = "0.5.5"
anyhow = "1.0.80"
base64 = "0.22.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
thiserror = "1.0.57"
reqwest = { version = "0.11.26", features = ["json", "blocking", "serde_json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
colored = "2.1.0"

[lib]
name = "provenance_rs"
path = "src/lib.rs"

[[bin]]
name = "pvnc"
path = "src/cli.rs"
